Add phase notification flag to resources
